--- a/TIN-BikeShop/src/BikeShop-Core/BikeShop-Core.csproj
+++ b/TIN-BikeShop/src/BikeShop-Core/BikeShop-Core.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>BikeShop_Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
+  </ItemGroup>
+
 </Project>
