--- a/TIN-BikeShop/src/BikeShop-Infrastructure/BikeShop-Infrastructure.csproj
+++ b/TIN-BikeShop/src/BikeShop-Infrastructure/BikeShop-Infrastructure.csproj
@@ -1,8 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>BikeShop_Infrastructure</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BikeShop-Core\BikeShop-Core.csproj" />
+  </ItemGroup>
 
 </Project>
