--- a/TIN-BikeShop/src/BikeShop-Api/BikeShop-Api.csproj
+++ b/TIN-BikeShop/src/BikeShop-Api/BikeShop-Api.csproj
@@ -24,5 +24,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BikeShop-Infrastructure\BikeShop-Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
