--- a/TIN-BikeShop/src/BikeShop-Api/appsettings.json
+++ b/TIN-BikeShop/src/BikeShop-Api/appsettings.json
@@ -7,7 +7,7 @@
 		}
 	},
 	"ConnectionStrings": {
-		"default": "Data Source=(localdb)\\\\MSSQLLocalDB;Initial Catalog=BikeShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+		"default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BikeShop;Integrated Security=True;Connect Timeout=10;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 	},
 	"AllowedHosts": "*"
 }
