JWT Token authorization with roles working

--- a/TIN-BikeShop/src/BikeShop-Api/BikeShop-Api.csproj
+++ b/TIN-BikeShop/src/BikeShop-Api/BikeShop-Api.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BikeShop-Core\BikeShop-Core.csproj" />
     <ProjectReference Include="..\BikeShop-Infrastructure\BikeShop-Infrastructure.csproj" />
   </ItemGroup>
 
