--- a/TIN-BikeShop/src/BikeShop-Api/appsettings.json
+++ b/TIN-BikeShop/src/BikeShop-Api/appsettings.json
@@ -9,5 +9,10 @@
 	"ConnectionStrings": {
 		"default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BikeShop;Integrated Security=True;Connect Timeout=10;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 	},
+	"BikeShopJwtConstrains": {
+		"Issuer": "BikeShop",
+		"Audience": "ApplicationUser",
+		"Key": "802948291571293940291253",
+	},
 	"AllowedHosts": "*"
-}
+	}
