--- a/TIN-BikeShop/src/BikeShop-Api/appsettings.json
+++ b/TIN-BikeShop/src/BikeShop-Api/appsettings.json
@@ -12,7 +12,11 @@
 	"BikeShopJwtConstrains": {
 		"Issuer": "BikeShop",
 		"Audience": "ApplicationUser",
-		"Key": "802948291571293940291253",
+		"Key": "802948291571293940291253"
+	},
+	"UserAuthorizationSettings": {
+		"ExpireAfterMinutes": 10,
+		"Secret": "F8843CAE5E225"
 	},
 	"AllowedHosts": "*"
-	}
+}
