--- a/TIN-BikeShop/src/BikeShop-React/package.json
+++ b/TIN-BikeShop/src/BikeShop-React/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "sfcookies": "^1.0.2",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
