--- a/TIN-BikeShop/relase/web.config
+++ b/TIN-BikeShop/relase/web.config
@@ -5,8 +5,8 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath=".\BikeShop-Api.exe" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+      <aspNetCore processPath="dotnet" arguments=".\BikeShop-Api.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
     </system.webServer>
   </location>
 </configuration>
-<!--ProjectGuid: 12e08890-bb96-4b3b-8cb4-6b98e9129cd3-->
+<!--ProjectGuid: 12E08890-BB96-4B3B-8CB4-6B98E9129CD3-->
